@@ -942,7 +942,8 @@ WIDGET_DEFAULT = {
         "bkg_color": "#222222",
         "show_headlights": True,
         "show_ignition": True,
-        "warning_color_ignition": "#00CC00",
+        "warning_color_stalling": "#00CC00",
+        "stalling_rpm_threshold": 100,
         "show_clutch": True,
         "warning_color_clutch": "#00BBDD",
         "show_wheel_lock": True,
